<resources>
    <string name="app_name">AsilApp10</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">Logout</string>
    <string name="indietro">indietro</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="tax_id_code">Tax ID Code</string>
    <string name="birth_place">Birth place</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nationality">Nationality</string>
    <string name="place_of_residence">Place of residence</string>
    <string name="address">Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_charges">Total Charges</string>
    <string name="do_you_smoke">Do you smoke?</string>
    <string name="do_you_do_drugs">Do you do drugs?</string>
    <string name="do_you_drink">Do you drink?</string>
    <string name="are_you_on_medicines">Are you on medicines?</string>
    <string name="have_you_ever_been_operated_in_the_past">Have you ever been operated in the past?</string>
    <string name="has_anyone_in_your_family_had_any_diseases">Has anyone in your family had any diseases?</string>
    <string name="do_you_exercise">Do you exercise?</string>
    <string name="do_you_have_a_good_diet">Do you have a good diet?</string>
    <string name="do_you_sleep_enough">Do you sleep enough?</string>
    <string name="do_you_have_any_allergies">Do you have any allergies?</string>
    <string name="do_you_drink_enough_water">Do you drink enough water?</string>
    <string name="how_many_meals_do_you_eat_in_a_day">How many meals do you eat in a day?</string>
    <string name="do_you_eat_enough_vegetables_and_fruit">Do you eat enough vegetables and fruit?</string>
    <string name="which_diet_are_you_on">Which diet are you on?</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="none">None</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="month">month</string>
    <string name="da">da</string>
    <string name="a">a</string>
    <string name="apply">Apply</string>
    <string name="share">Share</string>
    <string name="click_to_register_two">Click to register</string>
    <string name="_1_medical_measurement">1 - Medical measurement</string>
    <string name="place_your_finger_on_the_top_part_of_the_phone_as_shown_in_the_picture_keep_sliding_your_finger_until_the_flashlight_turns_off_once_done_keep_your_finger_still_for_3_seconds">Place your finger on the top part of the phone as shown in the picture, keep sliding your finger until the flashlight turns off, once done keep your finger still for 3 seconds</string>
    <string name="_2_pathologies">2 - Pathologies</string>
    <string name="phone_number">Phone number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes2">Yes</string>
    <string name="no2">No</string>
    <string name="delete_button_text">Delete</string>
    <string name="add_chart_pie">Add</string>
    <string name="total_charges_1">Total Charges</string>
    <string name="yes_5">Yes</string>
    <string name="no_5">No</string>
    <string name="yes_6">Yes</string>
    <string name="no_6">No</string>
    <string name="yes_7">Yes</string>
    <string name="no_7">No</string>
    <string name="yes_9">Yes</string>
    <string name="no_9">No</string>
    <string name="yes_8">Yes</string>
    <string name="no_8">No</string>
    <string name="yes_10">Yes</string>
    <string name="no_10">No</string>
    <string name="yes_11">Yes</string>
    <string name="no_11">No</string>
    <string name="yes_12">Yes</string>
    <string name="no_12">No</string>
    <string name="yes_13">Yes</string>
    <string name="no_13">No</string>
    <string name="yes_14">Yes</string>
    <string name="no_14">No</string>
    <string name="btn_login">Login</string>
    <string name="food">Food</string>
    <string name="food_eu">€</string>
    <string name="medicines">Medicines</string>
    <string name="medicines_eu">€</string>
    <string name="other">Other</string>
    <string name="other_eu">€</string>
    <string name="click_to_add_medicines">Click to add</string>
    <string name="click_to_add_other">Click to add</string>
    <string name="add_eu">Add</string>
    <string name="click_to_add_food">Click to add</string>
    <string name="add_edit_chart">Add</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="profile">Profile</string>
    <string name="health_profile">Health Profile</string>
    <string name="qr_code">QR code</string>
    <string name="apply_user_data">Apply</string>
    <string name="back_user_data">Back</string>
    <string name="edit_user_data">Edit</string>
    <string name="logout_user_data">Logout</string>
    <string name="address_user_data">Address:</string>
    <string name="birth_place_user_data">Birth place:</string>
    <string name="date_of_birth_user_data">Date of birth:</string>
    <string name="tax_id_code_user_data">Tax ID Code:</string>
    <string name="email_usser_data">Email:</string>
    <string name="name_user_data">Name:</string>
    <string name="nationality_user_data">Nationality:</string>
    <string name="phone_number_user_data">Phone number:</string>
    <string name="place_of_residence_user_data">Place of residence:</string>
    <string name="last_name_user_data">Last name:</string>
    <string name="_3_user_lifestyle">3 - User Lifestyle</string>
    <string name="_3_user_lifestyle_2">3 - User Lifestyle</string>
    <string name="are_you_on_medicines_health">Are you on medicines?</string>
    <string name="do_you_do_drugs_health">Do you do drugs?</string>
    <string name="do_you_drink_health">Do you drink?</string>
    <string name="do_you_drink_enough_water_health">Do you drink enough water?</string>
    <string name="do_you_eat_enough_vegetables_and_fruit_health">Do you eat enough vegetables and fruit?</string>
    <string name="do_you_exercise_health">Do you exercise?</string>
    <string name="do_you_have_a_good_diet_health">Do you have a good diet?</string>
    <string name="do_you_have_any_allergies_health">Do you have any allergies?</string>
    <string name="do_you_sleep_enough_health">Do you sleep enough?</string>
    <string name="do_you_smoke_health">Do you smoke?</string>
    <string name="has_anyone_in_your_family_had_any_diseases_health">Has anyone in your family had any diseases?</string>
    <string name="have_you_ever_been_operated_in_the_past_health">Have you ever been operated in the past?</string>
    <string name="how_many_meals_do_you_eat_in_a_day_health">How many meals do you eat in a day?</string>
    <string name="which_diet_are_you_on_health">Which diet are you on?</string>
    <string name="share_health">Share</string>
    <string name="back_health">Back</string>
    <string name="delete">Delete</string>
    <string name="apply_health">Apply</string>
    <string name="add_section_2">Add</string>
    <string name="back_section_2">Back</string>
    <string name="back_measurement">Back</string>
    <string name="back_measurement_heart">Back</string>
    <string name="edit_edit_text">Edit</string>
    <string name="measure_health">Measure</string>
    <string name="date_oxygenation">Date</string>
    <string name="oxygenation">Oxygenation:</string>
    <string name="pressure">Pressure:</string>
    <string name="date_temperature">Date</string>
    <string name="body_temperature">Body temperature:</string>
    <string name="date_respiratory">Date</string>
    <string name="respiratory_rate">Respiratory rate:</string>
    <string name="date_pressure">Date</string>
    <string name="descrizione_immagine">descrizione_immagine</string>
    <string name="heartbeat_rate">Heartbeat rate:</string>
    <string name="date_heart">Date</string>
    <string name="date_diabetes">Date</string>
    <string name="diabetes">Diabetes:</string>
    <string name="share_pathologies">Share</string>
    <string name="share_measurement">Share</string>
    <string name="save_edit_text">Save</string>
    <string name="measure_respiratory_rate">Measure</string>
    <string name="measure_temperature">Measure</string>
    <string name="measure_pressure">Measure</string>
    <string name="measure_oxygenation">Measure</string>
    <string name="measure_heart">Measure</string>
    <string name="measure_diabetes">Measure</string>
    <string name="back_home">Back</string>
    <string name="click_here_to_enter_as_a_guest">Click here to enter as a guest</string>
    <string name="current_regulations_and_guidelines_for_good_coexistence">Current Regulations and Guidelines for Good Coexistence</string>
    <string name="in_this_building_which_houses_asylum_seekers_it_is_essential_to_follow_rules_of_coexistence_that_promote_respect_and_harmony_among_all_residents_mutual_respect_tolerance_and_understanding_are_the_pillars_of_our_community_please_observe_the_following_norms">In this building, which houses asylum seekers, it is essential to follow rules of coexistence that promote respect and harmony among all residents. Mutual respect, tolerance, and understanding are the pillars of our community. Please observe the following norms:</string>
    <string name="_1_respect_for_common_spaces_keep_common_areas_clean_and_tidy_each_resident_is_responsible_for_cleaning_up_after_using_shared_areas_such_as_the_kitchen_living_room_and_recreational_areas">1 - Respect for Common Spaces: Keep common areas clean and tidy. Each resident is responsible for cleaning up after using shared areas such as the kitchen, living room, and recreational areas.</string>
    <string name="_2_silence_during_night_hours_respect_silence_from_10_00_pm_to_7_00_am_to_ensure_everyone_s_rest">2 - Silence during Night Hours: Respect silence from 10:00 PM to 7:00 AM to ensure everyone\'s rest.</string>
    <string name="_3_tolerance_and_cultural_respect_celebrate_cultural_diversity_and_show_respect_for_each_individual_s_traditions_and_practices_avoid_behaviors_or_comments_that_may_be_perceived_as_offensive_or_discriminatory">3 - Tolerance and Cultural Respect: Celebrate cultural diversity and show respect for each individual\'s traditions and practices. Avoid behaviors or comments that may be perceived as offensive or discriminatory.</string>
    <string name="_4_cooperation_and_assistance_collaborate_in_communal_activities_and_offer_help_to_neighbors_when_needed_thereby_strengthening_the_community_spirit">4 - Cooperation and Assistance: Collaborate in communal activities and offer help to neighbors when needed, thereby strengthening the community spirit.</string>
    <string name="_5_open_communication_in_case_of_disagreements_or_problems_open_and_constructive_communication_is_encouraged_contact_the_facility_managers_for_any_need_or_concern">5 - Open Communication: In case of disagreements or problems, open and constructive communication is encouraged. Contact the facility managers for any need or concern.</string>
</resources>