<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Riga per Nome -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/tf_name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Cognome -->
        <TextView
            android:id="@+id/label_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/last_name_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/tl_name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,TextFields,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Codice Fiscale -->
        <TextView
            android:id="@+id/label_cf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tax_id_code_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/tCF"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,TextFields,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Luogo di Nascita -->
        <TextView
            android:id="@+id/label_birth_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/birth_place_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/tb_place"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,TextFields,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Data di Nascita -->
        <TextView
            android:id="@+id/label_birth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/date_of_birth_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/td_birth"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,TextFields,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Nazionalità -->
        <TextView
            android:id="@+id/label_nationality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/nationality_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/t_nationality"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,TextFields,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Residenza -->
        <TextView
            android:id="@+id/label_residence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/place_of_residence_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/tp_residence"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Indirizzo -->
        <TextView
            android:id="@+id/label_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/address_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/t_address"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,TextFields,SpeakableTextPresentCheck"/>

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Numero di Telefono -->
        <TextView
            android:id="@+id/label_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone_number_user_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/tp_number"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Riga per Email -->
        <TextView
            android:id="@+id/label_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email_usser_data"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/t_email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:enabled="false"
            android:minHeight="30dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,TextFields,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!-- Spaziatura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <!-- Primo FrameLayout per i primi due bottoni -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_edit_data"
                android:backgroundTint="#3A833C"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:text="@string/edit_user_data"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/btn_back_edit"
                android:backgroundTint="#3A833C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_user_data"
                android:visibility="gone"
                android:textColor="#FFFFFF"/>
        </FrameLayout>

        <!-- Secondo FrameLayout per gli altri due bottoni -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_logout"
                android:backgroundTint="#3A833C"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logout_user_data"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/btn_apply_edit_data"
                android:backgroundTint="#3A833C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply_user_data"
                android:visibility="gone"
                android:textColor="#FFFFFF"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_share"
                android:backgroundTint="#3A833C"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/share"
                android:textColor="#FFFFFF"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
